@@ -1,17 +1,7 @@
-
-import java.io.{File, PrintWriter}
-import java.util.Calendar
-
-import com.amazonaws.auth.BasicAWSCredentials
-import com.amazonaws.regions.{Region, Regions}
-import com.amazonaws.services.dynamodbv2.AmazonDynamoDBClient
-import com.amazonaws.services.dynamodbv2.document.spec.{BatchWriteItemSpec, ScanSpec}
-import com.amazonaws.services.dynamodbv2.document._
-import com.amazonaws.services.dynamodbv2.model.{AttributeValue, ScanResult}
+import org.apache.spark.storage.StorageLevel
 import org.apache.log4j.{Level, BasicConfigurator, Logger}
 import org.apache.spark.SparkContext
 import org.apache.spark.SparkContext._
-import org.apache.spark.rdd.RDD
 import scala.collection.JavaConversions._
 import org.apache.spark.SparkConf
 import org.apache.spark.graphx._
@@ -21,45 +11,42 @@ import scala.util.hashing.MurmurHash3
 
 object MyPageRank {
 
+  val log = Logger.getLogger(MyPageRank.getClass)
+
   def hashToID(str: String) : Long = {
     return MurmurHash3.stringHash(str).toLong
   }
 
-  def parallelScan(sc: SparkContext, accessKey: String, secretKey: String, tableName: String): RDD[(String, String)] = {
-    val tableInfo = TableInfo(accessKey, secretKey, Regions.US_WEST_2, tableName)
-    val itemCount = getTable(tableInfo).describe.getItemCount
-    println(itemCount)
-    val totalSegments = 5
-    val scanInputs = 0 until totalSegments map {segment => (itemCount, totalSegments, segment, tableInfo)}
-
-    sc.parallelize(scanInputs)
-      .flatMap{tup => {
-        val scanResult : ItemCollection[ScanOutcome] = getTable(tup._4).scan(new ScanSpec().withMaxResultSize(tup._1.toInt)
-          .withTotalSegments(tup._2)
-          .withSegment(tup._3)
-          .withAttributesToGet("url", "links"))
-
-        val iterator : java.util.Iterator[Item] = scanResult.iterator()
-        iterator.flatMap { x => {
-          val name = x.getString("url")
-          x.getStringSet("links").map { s =>
-            (name, s)
-          }
-        }}.toList
-      }}
+  def prepareGraphData(sc: SparkContext) = {
+    val edges = sc.textFile("s3://cis455crawlerreal/links_db").flatMap { x => {
+      val arr = x.split(",")
+      if (arr.length == 2) Some((arr(0), arr(1))) else None
+    }}
+    val vertices = edges.map{ tup => tup._1 }.distinct(30)
+      .map { x => (hashToID(x), x)}
+    val edgeIDs = edges.map{ tup => (hashToID(tup._2), hashToID(tup._1))}
+    val edgeRdd = edgeIDs.join(vertices, 100).map{tup => tup._2._1 + "," + tup._1}
+    vertices.map{x => x._1.toString + "," + x._2}.saveAsTextFile("s3://cis455crawlerreal/vertex_db")
+    edgeRdd.saveAsTextFile("s3://cis455crawlerreal/edge_db")
   }
 
-  case class TableInfo(accessKey: String, secretKey: String, region: Regions, tableName: String)
+  def doPageRank(sc: SparkContext) = {
+    val vertices = sc.textFile("s3://cis455crawlerreal/vertex_db").map {
+      line => {
+        val arr = line.split(",")
+        (arr(0).toLong, arr(1))
+      }}.persist(StorageLevel.MEMORY_AND_DISK_SER)
+    val edges = sc.textFile("s3://cis455crawlerreal/edge_db")
+      .map{ line => {
+        val arr = line.split(",")
+        Edge[Int](arr(0).toLong, arr(1).toLong, 1)
+      }}.persist(StorageLevel.MEMORY_AND_DISK_SER)
 
-
-  def getDB(accessKey: String, secretKey: String, regions: Regions) : DynamoDB = {
-    val client = new AmazonDynamoDBClient(new BasicAWSCredentials(accessKey, secretKey))
-    client.setRegion(Region.getRegion(regions))
-    new DynamoDB(client)
-  }
-
-  def getTable(tableInfo: TableInfo) : Table = {
-    getDB(tableInfo.accessKey, tableInfo.secretKey, tableInfo.region).getTable(tableInfo.tableName)
+    val theGraph = Graph[String, Int](vertices, edges, "missing")
+    theGraph.staticPageRank(1000).vertices
+      .join(vertices, 30)
+      .map{x => x._2._2 + "," + x._2._1}
+      .saveAsTextFile("s3a://cis455crawlerreal/pagerank-1000-out")
   }
 
 
@@ -68,35 +55,15 @@ object MyPageRank {
     Logger.getRootLogger().setLevel(Level.INFO)
     BasicConfigurator.configure()
 
+    //val (accessKey, secretKey) = getCreds
     val conf = new SparkConf().setAppName("DynamoDB PageRank")
+      .set("spark.rdd.compress", "true")
+      .set("spark.executor.extraJavaOptions", "XX:+PrintGCDetails -XX:+PrintGCTimeStamps")
     val sc = new SparkContext(conf)
-    val edges = parallelScan(sc, "aws_access_key", "aws_secret_key", "455crawler-graph")
+    sc.hadoopConfiguration.set("fs.s3a.access.key", "AKIAJAORMEQ7SPZCHL7Q")
+    sc.hadoopConfiguration.set("fs.s3a.secret.key", "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")
+    doPageRank(sc)
 
-    val vertices = edges.map{ tup => tup._1 }.distinct()
-      .map { x => (hashToID(x), x)}
-    val edgeIDs = edges.map{ tup => (hashToID(tup._1), hashToID(tup._2))}
-    val edgeRdd = edgeIDs.map(tup => (tup._2, tup._1)).join(vertices).map{tup => Edge[Int](tup._2._1, tup._1, 1)}
-
-    val theGraph = Graph[String, Int](vertices, edgeRdd, "missing")
-
-    val results = theGraph.pageRank(0.0001).vertices.join(vertices).map{x =>
-      (x._2._2, x._2._1)}.collect()
-
-    val dynamoDB = getDB("aws_access_key", "aws_secret_key", Regions.US_WEST_2)
-
-    val items = results.map {tup => new Item().withPrimaryKey("url", tup._1).withDouble("rank", tup._2)}
-
-    try {
-      items.sliding(25).foreach { batch =>
-        val writeItems = new TableWriteItems("pagerank-results").withItemsToPut(
-          results.map { tup => new Item().withPrimaryKey("url", tup._1).withDouble("rank", tup._2) }.toList
-        )
-
-        dynamoDB.batchWriteItem(writeItems)
-      }
-    } catch {
-      case e: Exception => e.printStackTrace()
-    }
 
 
   }
